css/styles.css
/* ... */
.email-text:hover {
  background-color: rgb(243, 243, 243);
}

.copied-text {
  position: relative;
  top: -60px;
  background-color: rgba(0, 0, 0, 0.7);
  color: #fff;
  padding: 5px 10px;
  border-radius: 5px;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.5s, top 0.5s;
  width: fit-content;
  font-size: 12px;
}

.board-grid {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-gap: 12px;
  justify-content: space-around;
  width: 108%;
  margin: 52px -4%;
}

.board-item {
  overflow: hidden;
  transition: ease-in-out 0.4s;
  border-radius: 8px;
}

.board-item img {
  display: block;
  max-width: 100%;
}

.board-item:hover {
  transform: rotate(-2deg) scale(1.05);
  z-index: 2;
  box-shadow: rgba(149, 157, 165, 0.6) 0px 8px 24px;
  transition: ease-in-out 0.2s;
}

footer {
  width: 540px;
  max-width: 540px;
  min-width: 120px;
  /* border-top: 1px solid rgb(243, 243, 243); */
  padding: 52px 20px;
  color: rgb(168, 168, 168);
  margin: 0px auto;
  display: flex;
  justify-content: space-between;
  white-space: nowrap;
  color: #333333;
}

footer a {
  color: #828282;
}

footer a:hover {
  color: #333333;
  text-decoration: none;
}

#mobile-hidden {
  display: block;
}

@media only screen and (max-width: 800px) {
  /* For mobile: */
  .wrapper {
    margin: 0px auto 0px auto;
    width: 100%;
  }

  #mobile-hidden {
    display: none;
  }

  .content.wide {
    margin: 0px -20px;
    padding-left: 20px;
  }

  .main-img {
    width: 100%;
    background-size: cover;
    background-position: center;
    height: 320px;
    margin: 0px;
  }

  .large-pic {
    width: auto;
    background-image: url("images/iceland.png");
    margin: 0% -5%;
  }

  .small {
    min-width: 40px;
    min-height: 40px;
  }

  .navbar-name-container .flex-row.gap8 {
    flex-direction: column;
    gap: 0px;
  }

  .navbar-links-container {
    display: none;
  }

  .menu-button {
    display: flex;
  }

  .menu-container {
    top: -200px;
  }

  .page-header {
    margin: 20px auto 0px auto;
  }

  .section .flex-column.gap16 .flex-row.gap16 {
    gap: 6px;
  }

  .section.horizontal .flex-row {
    flex-direction: column;
    gap: 0px;
  }

  .section.horizontal .light {
    white-space: nowrap;
  }

  .project-item {
    flex-direction: column;
  }

  .project-item .flex-column {
    margin: 0px;
  }

  .project-th {
    width: 100%;
    height: 160px;
    margin: 0px;
  }

  .project-th-logo {
    height: max-content;
  }

  .mobile-display {
    display: contents;
  }

  .desktop-display {
    display: none;
  }

  .grid-about {
    grid-template-columns: 1fr 1fr;
    width: 110%;
    margin: auto -5%;
  }

  .light {
    white-space: normal;
  }

  .flip-card img {
    height: 100% !important;
    width: 100%;
    object-fit: cover;
  }

  .section .flex-row.gap44 {
    flex-direction: column;
  }

  .board-grid {
    grid-template-columns: 1fr 1fr;
  }

  footer {
    max-width: 540px;
    margin: 0px auto 0px auto;
    flex-direction: column;
    gap: 28px;
    width: 100%;
    padding: 40px 20px;
  }

  footer .spacer20 {
    display: none;
  }

  footer .flex-column.gap8 .flex-column.gap8 {
    flex-direction: row;
  }

  .copy-email-container {
    height: 24px;
  }

  .board-grid {
    width: 100%;
    margin-left: 0px;
  }
}

